Fix too large nav bar splitting into two lines

--- a/input/assets/css/override.less
+++ b/input/assets/css/override.less
@@ -410,3 +410,8 @@ pre .btn-copy {
 pre:hover .btn-copy {
   opacity: 1;
 }
+
+// Fix too long nav bar splitting into two lines
+.nav > li > a {
+  padding: 10px !important; 
+}
